@@ -1,3 +1,7 @@
+=item 0.13 - April 17, 2006 
+
+Fixed Apache::DProf and Apache::SmallProf to work when using taint mode. 
+
 =item 0.12 - April 3, 2006 
 
 Fixed mod_perl 1.x bug in Apache::SmallProf that was using mp2 code mistakenly.
